# budouxpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  benchmark.cpp
budoux/: model.hpp  parser_view.hpp
cmake/: budouxppConfig.cmake.in
docs/superpowers/specs/: 2026-05-09-budouxpp-rename-and-package-design.md
test/: CMakeLists.txt  test_budoux.cpp
test/data/: mini_model.json
test/find_package_smoke/: CMakeLists.txt  main.cpp
